# polkavm

./: Cargo.toml  Makefile  rust-toolchain.toml
.github/workflows/: rust.yml
benches/src/: main.rs
capi/: polkavm_guest.h
ci/jobs/: build-and-run-substrate-node.sh  build-and-test-nightly-musttail.sh  build-and-test-pallet-revive.sh  build-and-test.sh  clippy-macos.sh
crates/polkavm/: Cargo.toml
crates/polkavm-assembler/src/: aarch64.rs  amd64.rs  assembler.rs  lib.rs  misc.rs
crates/polkavm-common/: Cargo.toml
crates/polkavm-common/src/: abi.rs  assembler.rs  cast.rs  program.rs  regmap.rs  simulator.rs  utils.rs  writer.rs  zygote.rs
crates/polkavm-derive-impl/src/: export.rs
crates/polkavm-derive/src/: lib.rs
crates/polkavm-disassembler/src/: lib.rs
crates/polkavm-linker/: Cargo.toml
crates/polkavm-linker/src/: dwarf.rs  (+5 more)
crates/polkavm-test-data/: Cargo.toml  build.rs
crates/polkavm-zygote/: Cargo.toml
examples/doom/: Cargo.toml
examples/quake/: Cargo.toml
examples/quake/src/: machine.rs  main.rs  vm.rs
examples/transfer/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_linker.rs  fuzz_polkavm.rs
guest-programs/: Cargo.toml  build-benchmarks.sh  build-test-data.sh
guest-programs/bench-ed25519/: Cargo.toml
guest-programs/bench-ed25519/src/: main.rs
guest-programs/program-for-bug/: Cargo.toml
services/: Cargo.toml  Makefile  README.md
services/.cargo/: config.toml
services/algo/: Cargo.toml  algo.pvm  algo.txt  algo_blob.pvm  fib.pvm  fib.txt  fib_blob.pvm
services/algo/src/: main.rs
services/ascii/: Cargo.toml  ascii_blob.pvm
services/ascii/src/: main.rs
services/ascii_loop/: Cargo.toml  ascii.pvm  ascii.txt  ascii_loop.pvm  ascii_loop.txt  ascii_loop_blob.pvm
services/ascii_loop/src/: main.rs
services/auth_copy/: Cargo.toml  auth_copy.pvm  auth_copy.txt  auth_copy_blob.pvm  rust-toolchain.toml
services/auth_copy/src/: main.rs
services/babyvm/: Cargo.toml  babyvm.pvm  babyvm.txt  babyvm_blob.pvm
services/babyvm/src/: main.rs
services/babyvm_child/: Cargo.toml
services/balances/: Cargo.toml  README.md  balances.pvm  balances.txt  balances_blob.pvm
services/balances/src/: main.rs
services/blake2b/: Cargo.toml  blake2b.pvm  blake2b.txt  blake2b_blob.pvm
services/blake2b/src/: main.rs
services/blake2b_child/: Cargo.toml  blake2b_child.pvm  blake2b_child.txt  blake2b_child_blob.pvm
services/blake2b_child/src/: main.rs
services/blake2b_parent/: Cargo.toml  blake2b_parent.pvm  blake2b_parent.txt  blake2b_parent_blob.pvm
services/blake2b_parent/src/: main.rs
services/bootstrap/: Cargo.toml  blob_32.pvm  blob_64.pvm  bootstrap.pvm  bootstrap.txt  bootstrap_32.pvm  bootstrap_64.pvm  bootstrap_blob.pvm
services/bootstrap/src/: main.rs
services/compress/: Cargo.toml  compress.pvm  compress.txt  compress_blob.pvm
services/compress/src/: main.rs
services/corevm/: Cargo.toml  README.md  corevm.pvm  corevm.txt  corevm_blob.pvm
services/corevm/src/: main.rs
services/corevm_child/: Cargo.toml  corevm_child.pvm  corevm_child.txt  corevm_child_blob.pvm
services/corevm_child/src/: main.rs
services/delay/: Cargo.toml  README.md  delay.pvm  delay.txt  delay_blob.pvm
services/delay/src/: main.rs
services/doom/: Cargo.toml
services/doom/src/: main.rs  vm.rs
services/fib/: Cargo.toml  blob_32.pvm  blob_64.pvm  fib.pvm  fib.txt  fib_32.pvm  fib_64.pvm  fib_blob.pvm
services/fib/src/: main.rs
services/fib2/: Cargo.toml  fib2.pvm  fib2.txt  fib2_blob.pvm
services/fib2/src/: main.rs
services/fib2_WIP/: Cargo.toml  fib2_WIP.pvm  fib2_WIP.txt  fib2_WIP_blob.pvm
services/fib2_WIP/src/: main.rs
services/fib2_child/: Cargo.toml  fib2_child.pvm  fib2_child.txt  fib2_child_blob.pvm
services/fib2_child/src/: main.rs
services/game_of_life/: Cargo.toml  README.md  game_of_life.pvm  game_of_life.txt  game_of_life_blob.pvm
services/game_of_life/src/: main.rs
services/game_of_life_child/: Cargo.toml  game_of_life_child.pvm  game_of_life_child.txt  game_of_life_child_blob.pvm
services/game_of_life_child/src/: main.rs
services/game_of_life_manifest/: Cargo.toml  game_of_life_manifest.pvm  game_of_life_manifest.txt  game_of_life_manifest_blob.pvm
services/game_of_life_manifest/src/: main.rs
services/game_of_life_parent_only/: Cargo.toml  game_of_life_parent_only.pvm  game_of_life_parent_only.txt  game_of_life_parent_only_blob.pvm
services/game_of_life_parent_only/src/: main.rs
services/hello_world/: Cargo.toml  hello_world.pvm  hello_world.txt  hello_world_blob.pvm
services/hello_world/src/: main.rs
services/megatron/: Cargo.toml  megatron.pvm  megatron.txt  megatron_blob.pvm
services/megatron/src/: main.rs
services/mnist/: Cargo.toml  mnist.pvm  mnist.txt  mnist_blob.pvm
services/mnist/src/: main.rs
services/mnist/weights/: quantization_params.json
services/null_authorizer/: Cargo.toml  null_authorizer.pvm  null_authorizer.txt  null_authorizer_blob.pvm
services/null_authorizer/src/: main.rs
services/revm_test/: Cargo.toml  add_example.hex  revm_test.pvm  revm_test.txt  revm_test_blob.pvm
services/revm_test/src/: main.rs
services/sp1/: Cargo.toml
services/sp1/src/: main.rs
services/sp1verifier/: Cargo.toml  README.md
services/sp1verifier/src/: main.rs
services/transfer/: Cargo.toml  transfer.pvm  transfer.txt  transfer_blob.pvm
services/transfer/src/: main.rs
services/tribonacci/: Cargo.toml  tribonacci.pvm  tribonacci.txt  tribonacci_blob.pvm
services/tribonacci/src/: main.rs
services/utils/: Cargo.toml
services/utils/src/: constants.rs  functions.rs  hash_functions.rs  host_functions.rs  lib.rs
services/wasm_exe/: Cargo.toml  wasm_exe.pvm  wasm_exe.txt  wasm_exe_blob.pvm
services/wasm_exe/src/: main.rs
services/wasm_exe/wasm-snap/: .gitignore  Cargo.toml
services/wasm_exe/wasm-snap/src/: error.rs  lib.rs  state.rs  tests.rs  value.rs  vm.rs
test-data/: program-for-bug_32.elf.zst  program-for-bug_64.elf.zst  revive-transfer-example-18.zst  revive-transfer-example.zst
tools/benchtool/: Cargo.toml
tools/spectool/: Cargo.toml
(+267 files in other folders)
