[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
debug = true

[profile.no-lto]
inherits = "release"
lto = false

[workspace]
resolver = "2"
members = [
    "fib",
    "bootstrap",
    "tribonacci",
    "megatron",
    "transfer",
    "balances",
    "delay",
    "null_authorizer",
    "auth_copy",
    "blake2b",
    "fib2",
    "babyvm",
    "babyvm_child",
    "utils"
]
