[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
debug = true

[profile.no-lto]
inherits = "release"
lto = false

[workspace]
resolver = "2"
members = [
    "fib",
    "bootstrap",
    "tribonacci",
    "megatron",
    "balances",
    "algo",
    "null_authorizer",
    "auth_copy",
    "blake2b",
    "game_of_life",
    "game_of_life_child",
    "revm_test",
    "doom",
    "utils",
    "mnist",
    "ascii",
    "ascii_loop",
    "wasm_exe",
    "wasm_exe/wasm-snap"
]
