[package]
name = "quake-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = { workspace = true }
log.workspace = true
polkakernel = { git = "https://github.com/paritytech/polkaports", rev = "56e103cdbef318f075c18bd79442257cfb63a18c", features = ["std"] }
polkavm = { path = "../../crates/polkavm" }
sdl2 = { workspace = true }

[features]
default = ["sdl2/bundled"]
