[package]
name = "quake-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = { workspace = true }
log.workspace = true
polkakernel = { git = "https://github.com/paritytech/polkaports", rev = "64a47223ad6f7c9f8dd8e4ed3f08679d66210b74", features = ["std"] }
polkavm = { path = "../../crates/polkavm" }
sdl2 = { workspace = true }

[features]
default = ["sdl2/bundled"]
