[package]
name = "quake-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = { workspace = true }
log.workspace = true
polkavm = { path = "../../crates/polkavm" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
sdl2 = { workspace = true, features = ["bundled"] }
