cargo-features = ["edition2024"]

[package]
name = "algo"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "algo"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }
utils = { path = "../utils" }
hashbrown = "0.12"