cargo-features = ["edition2024"]

[package]
name = "babyvm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "babyvm"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
utils = { path = "../utils" }
simplealloc = { path = "../../crates/simplealloc" }