cargo-features = ["edition2024"]

[package]
name = "blake2b_parent"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "blake2b_parent"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }
utils = { path = "../utils" }
