cargo-features = ["edition2024"]

[package]
name = "compress"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "compress"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }
utils = { path = "../utils" }
lzss = { version = "0.9.1", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }