cargo-features = ["edition2024"]

[package]
name = "doom"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "doom"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive", default-features = false }
simplealloc = { path = "../../crates/simplealloc" }
# picoalloc = { version = "1",  default-features = false }
polkavm = { path = "../../crates/polkavm" , default-features = false }
