cargo-features = ["edition2024"]

[package]
name = "revm_test"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "revm_test"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }
# picoalloc = { version = "1", features = ["global_allocator_rust"], default-features = false }
utils = { path = "../utils" }
bytes = { version = "1", default-features = false }

# revm
revm = { version = "22.0.1", default-features = false }
revm-database = { version = "3.0.0", default-features = false }
