cargo-features = ["edition2024"]

[package]
name = "sp1"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "sp1"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }
sp1-sdk = "3.0"
bincode = "1.3"
