cargo-features = ["edition2024"]

[package]
name = "wasm_exe"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "wasm_exe"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }
utils = { path = "../utils" }
wasm_snap = { package = "wasm-snap", path = "wasm-snap", default-features = false }